--- a/rb_customer.html
+++ b/rb_customer.html
@@ -7,7 +7,7 @@
       Review Assignment
 
       Red Ball Pizza Customer Information
-      Author: 
+      Author:
       Date:   
 
       Filename:   rb_customer.html
@@ -19,6 +19,9 @@
    <title>Red Ball Pizza Customer Form</title>
    <link href="rb_base.css" rel="stylesheet" />
    <link href="rb_styles2.css" rel="stylesheet" />
+   <link href="rb_forms2.css" rel="stylesheet"/>
+   <link href="rb_validate.css" rel="stylesheet"/>
+   <script src="rb_formsubmit2.js"></script>
 </head>
 
 <body>
@@ -45,7 +48,37 @@
          want to place your order over the phone, call us at
          <a href="tel:+13865557499">(386) 555-7499</a>.</p>
          
-         
+      <form action="http://www.example.com/redball/customer" method="POST">
+         <div class="formRow">
+            <label for="nameBox">Name*</label>
+            <input required name="custName" id="nameBox" type="text" placeholder="First and Last">
+         </div>
+         <div class="formRow">
+            <label for="phoneBox">Phone*</label>
+            <input required name="custPhone" id="phoneBox" type="tel" placeholder="(###) ###-####"
+            pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$">
+         </div>
+         <div class="formRow">
+            <input name="orderType" id="delivery" type="radio" checked>
+            <label for="delivery">Delivery</label>
+            <input name="orderType" id="pickUp" type="radio">
+            <label for="pickUp">Pickup</label>
+         </div>
+         <fieldset id="deliveryInfo">
+            <legend>Delivery Options</legend>
+            <textarea id="addressBox" name="delAddress" placeholder="Enter delivery address"></textarea>
+            <label for="delBox">Delivery Time (leave blank for earliest delivery)</label>
+            <input name="delTime" id="delBox" type="time"> 
+         </fieldset>
+         <fieldset id="pickupInfo">
+            <legend>Pickup Options</legend>
+            <label for="pickupBox">Pickup Time (leave blank for earliest pickup)</label>
+            <input name="pickupTime" id="pickupBox" disabled type="time">
+         </fieldset>
+         <div id="buttons">
+            <input type="submit" value="Begin Building Your Order">
+         </div>
+      </form>   
    </section>
 
    <footer>
