--- a/rb_build.html
+++ b/rb_build.html
@@ -82,32 +82,32 @@
             </div>
             <div class="formRow">
                <label>Pepperoni</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Ham</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Pork</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-            </div>
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
+               </div>
             <div class="formRow">
                <label>Sausage</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-            </div>
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
+               </div>
             <div class="formRow">
                <label>Chicken</label>
                <input type="radio">
@@ -127,40 +127,43 @@
             </div>
             <div class="formRow">
                <label>Mushrooms</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Green Peppers</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Onions</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Tomatoes</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
             <div class="formRow">
                <label>Jalepenos</label>
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
-               <input type="radio">
+               <input type="radio" value="full">
+               <input type="radio" value="left">
+               <input type="radio" value="right">
+               <input type="radio" value="none">
             </div>
          </fieldset>
+         <div class="button">
+            <input type="submit" value="Add To Order"
+         </div>
       </form>   
    </section>
 
